--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -20,6 +20,7 @@ html,body{
     max-height: 100%;
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
+    padding: 20px 35px;
 }
 
 .column form {
@@ -36,7 +37,7 @@ html,body{
     border-bottom: 1px solid #dedede;
 }
 
-.column form input["submit"]{
+.column form input[type="submit"]{
     background-color: #4285f4;
     color :#fff;
     height: 36px;
@@ -45,5 +46,6 @@ html,body{
     border-radius: 3px;
     font-weight:500;
     margin-top:10px;
-    margin-bottom:10px;
+    margin-bottom:20px;
+    font-size: 16px;
 }
