--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,6 +4,12 @@ html,body{
     margin: 0;
 }
 
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+    box-sizing: border-box;
+}
+
 
 .signInContainer{
     background-color: #efefee;
@@ -21,11 +27,13 @@ html,body{
     width: 450px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
     padding: 20px 35px;
+    overflow-y: auto;
 }
 
 .column form {
     display: flex;
     flex-direction: column;
+    padding-top: 24px;
 }
 
 .column form input[type="text"],
@@ -48,4 +56,31 @@ html,body{
     margin-top:10px;
     margin-bottom:20px;
     font-size: 16px;
+}
+
+.column .header {
+    padding: 20px 0;
+}
+
+.column h3 {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    margin: 0;
+    padding-top: 16px;
+    color: #000;
+}
+
+.column .header span{
+    font-size: 14px;
+}
+
+.column .header img {
+    width: 100px;
+}
+
+.signInMessage {
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: none;
 }
